update provider code for item and provider